k8s/kargo/kargo-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kargo-gateway
  namespace: istio-system
  labels:
    app.kubernetes.io/instance: kargo
    environment: dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - kargo-dev.hamedstock.com
    port:
      name: http
      number: 80
      protocol: HTTP
