k8s/kargo/kargo-istio-dev.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kargo-dev
  namespace: kargo
spec:
  hosts:
  - kargo-dev.hamedstock.com
  gateways:
  - istio-system/kargo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kargo-api.kargo.svc.cluster.local
        port:
          number: 80
